--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -74,6 +74,7 @@
                 android:layout_width="@dimen/_13sdp"
                 android:layout_height="@dimen/_13sdp"
                 android:layout_centerVertical="true"
+                android:visibility="gone"
                 app:srcCompat="@drawable/email_ico" />
 
             <EditText
