--- a/app/src/main/res/layout/activity_tags.xml
+++ b/app/src/main/res/layout/activity_tags.xml
@@ -14,7 +14,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
-        android:background="@drawable/bg_top_bar">
+        android:background="@color/white">
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/img_tags_back"
@@ -50,12 +50,18 @@
 
     </RelativeLayout>
 
+    <View
+        android:id="@+id/v_1"
+        android:layout_width="match_parent"
+        android:layout_height=".5dp"
+        android:layout_below="@+id/toolbar"
+        android:background="@color/m_f_gender_color"/>
 
     <RelativeLayout
         android:id="@+id/linear"
         android:layout_width="@dimen/_300sdp"
         android:layout_height="@dimen/_35sdp"
-        android:layout_below="@+id/toolbar"
+        android:layout_below="@+id/v_1"
         android:layout_marginLeft="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginRight="@dimen/_10sdp"
@@ -119,6 +125,7 @@
             android:layout_gravity="center"
             android:padding="@dimen/_10sdp"
             android:tint="@color/gray2"
+            android:visibility="gone"
             app:srcCompat="@drawable/ic_search" />
 
         <TextView
