--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -90,8 +90,9 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height=".5px"
+                    android:layout_height="wrap_content"
                     android:background="@color/m_f_gender_color"
+                    android:visibility="gone"
                     android:layout_alignParentBottom="true"/>
 
             </RelativeLayout>
@@ -253,6 +254,7 @@
                                 app:srcCompat="@drawable/ic_search" />
 
 
+
                             <TextView
                                 android:id="@+id/txt_search"
                                 android:layout_width="match_parent"
@@ -289,6 +291,7 @@
                     android:layout_height="0.5px"
                     android:layout_alignParentBottom="true"
                     android:background="@color/m_f_gender_color" />
+
             </RelativeLayout>
 
         </RelativeLayout>
@@ -297,7 +300,7 @@
             android:id="@+id/frame_fragments"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-           />
+            />
 
     </LinearLayout>
 
@@ -354,27 +357,27 @@
                 android:background="@color/transparent"
                 android:orientation="vertical">
 
-            <RelativeLayout
-                android:id="@+id/rtlv_alert"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:background="@color/transparent"
-                android:orientation="vertical">
-
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/img_alert"
-                    android:layout_width="@dimen/_26sdp"
+                <RelativeLayout
+                    android:id="@+id/rtlv_alert"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_centerHorizontal="true"
-                    android:paddingBottom="@dimen/_2sdp"
-                    android:scaleType="fitCenter"
-                    android:tint="@color/black30p"
-                    app:srcCompat="@drawable/alert" />
+                    android:gravity="center"
+                    android:background="@color/transparent"
+                    android:orientation="vertical">
+
+                    <android.support.v7.widget.AppCompatImageView
+                        android:id="@+id/img_alert"
+                        android:layout_width="@dimen/_26sdp"
+                        android:layout_height="match_parent"
+                        android:layout_centerHorizontal="true"
+                        android:paddingBottom="@dimen/_2sdp"
+                        android:scaleType="fitCenter"
+                        android:tint="@color/black30p"
+                        app:srcCompat="@drawable/alert" />
 
 
 
-            </RelativeLayout>
+                </RelativeLayout>
                 <TextView
                     android:id="@+id/tv_alert_badge_count"
                     android:layout_width="@dimen/_14sdp"
@@ -417,7 +420,6 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/transparent"
                 android:gravity="center">
 
                 <android.support.v7.widget.AppCompatImageView
@@ -425,21 +427,20 @@
                     android:layout_width="@dimen/_26sdp"
                     android:layout_height="match_parent"
                     android:layout_centerHorizontal="true"
-                    android:paddingBottom="@dimen/_2sdp"
                     android:scaleType="fitCenter"
-                    android:tint="@color/black30p"
-                    android:background="@color/transparent"
-                    app:srcCompat="@drawable/profile_active" />
+                    app:srcCompat="@drawable/profile_inactive" />
 
                 <TextView
+                    android:id="@+id/tv_key_points_new"
                     android:layout_width="@dimen/_30sdp"
                     android:layout_height="@dimen/_30sdp"
                     android:layout_centerHorizontal="true"
                     android:text="99"
                     android:gravity="center"
-                    android:textSize="@dimen/_10sdp"
+                    android:textSize="@dimen/_6sdp"
                     android:paddingRight="@dimen/_5sdp"
-                    android:paddingLeft="@dimen/_6sdp"
+                    android:paddingLeft="@dimen/_7sdp"
+                    android:paddingTop="@dimen/_2sdp"
 
                     />
 
