--- a/app/src/main/res/drawable/button_corner_border.xml
+++ b/app/src/main/res/drawable/button_corner_border.xml
@@ -1,5 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">/>
     <corners android:radius="@dimen/_150sdp"/>
 
-    <solid android:color="@color/colorAccent"/>
+    <stroke android:color="@color/colorAccent"
+        android:width="@dimen/_4sdp"/>
+
+    <solid android:color="@color/colorprimarytop"/>
 </shape>
