--- a/app/src/main/res/drawable/button_corner_border_trans.xml
+++ b/app/src/main/res/drawable/button_corner_border_trans.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">/>
     <corners android:radius="@dimen/_150sdp"/>
 
-    <solid android:color="#000000"/>
+    <solid android:color="@color/colorprimarytop"/>
 </shape>
