--- a/app/src/main/res/layout/adapter_custom_trending.xml
+++ b/app/src/main/res/layout/adapter_custom_trending.xml
@@ -208,6 +208,7 @@
                     </android.support.v4.view.ViewPager>
 
                     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                       android:id="@+id/frame_keyinbutton"
                         android:layout_width="match_parent"
                         android:layout_marginTop="@dimen/_30sdp"
                         android:layout_centerInParent="true"
