--- a/app/src/main/res/layout/registration_part_one_password.xml
+++ b/app/src/main/res/layout/registration_part_one_password.xml
@@ -125,11 +125,10 @@
         android:layout_marginLeft="@dimen/_12sdp"
         android:layout_gravity="center"
         android:gravity="center_vertical"
-        android:visibility="gone"
         android:orientation="horizontal">
 
-        <CheckBox
-            android:id="@+id/cb_tnc"
+        <TextView
+            android:id="@+id/tv_tnc_one"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="I accept "
