--- a/app/src/main/res/drawable/press_unpress.xml
+++ b/app/src/main/res/drawable/press_unpress.xml
@@ -5,5 +5,5 @@
 
 
     <item android:drawable="@color/black20p" android:state_enabled="true" android:state_pressed="true"/>
-    <item android:drawable="@color/transparent" android:state_enabled="true"></item>
+    <item android:drawable="@color/transparent" android:state_enabled="true" />
 </selector>
