--- a/app/src/main/res/layout/new_map_on_activity_detail.xml
+++ b/app/src/main/res/layout/new_map_on_activity_detail.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
-    android:layout_marginTop=".5dp"
-    >
+    android:layout_marginTop=".5dp">
 
     <TextView
         android:id="@+id/tv_heading"
