--- a/app/src/main/res/layout/registration_part_one_password.xml
+++ b/app/src/main/res/layout/registration_part_one_password.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -125,6 +124,7 @@
         android:layout_marginLeft="@dimen/_12sdp"
         android:layout_gravity="center"
         android:gravity="center_vertical"
+        android:visibility="gone"
         android:orientation="horizontal">
 
         <TextView
