--- a/app/src/main/res/layout/registration_part_one_password.xml
+++ b/app/src/main/res/layout/registration_part_one_password.xml
@@ -146,6 +146,26 @@
             android:textColor="@color/colorPrimaryDark_new"
             />
 
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" and "
+            android:layout_gravity="center"
+            android:gravity="center_vertical"
+            android:theme="@style/MyCheckbox"
+            android:textColor="@color/email_text_new_reg"/>
+
+
+        <TextView
+            android:id="@+id/tv_privacy_policy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/privacy_policy"
+            android:textColor="@color/colorPrimaryDark_new"
+            />
+
     </LinearLayout>
 
 </LinearLayout>
