--- a/app/src/main/res/layout/activity_other_profile.xml
+++ b/app/src/main/res/layout/activity_other_profile.xml
@@ -47,6 +47,7 @@
     </RelativeLayout>
 
     <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coardinat_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/rl_title_view"
@@ -121,6 +122,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:behavior_hideable="false"
+            android:layout_marginTop="@dimen/_10sdp"
             app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
             <com.xw.repo.widget.BounceScrollView
