--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -54,10 +54,11 @@
 
 
             <!--android:text="@string/aboutme"-->
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
+                android:background="@drawable/setting_drawable"
                 android:orientation="vertical">
 
                 <TextView
@@ -222,6 +223,7 @@
                 </LinearLayout>
 
                 <View
+                    android:id="@+id/view_bio"
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
                     android:layout_marginLeft="@dimen/_10sdp"
@@ -239,7 +241,7 @@
                         android:layout_height="@dimen/_40sdp"
                         android:padding="@dimen/_10sdp"
                         android:tint="#A3A3A3"
-                        app:srcCompat="@drawable/privecy_policy_icon" />
+                        app:srcCompat="@drawable/ic_lock" />
 
                     <TextView
                         android:layout_width="0dp"
@@ -265,7 +267,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@drawable/setting_drawable"
             android:layout_marginTop="@dimen/_10sdp"
             android:orientation="vertical">
 
@@ -296,7 +298,8 @@
                     android:layout_width="@dimen/_40sdp"
                     android:layout_height="@dimen/_40sdp"
                     android:padding="@dimen/_10sdp"
-                    android:src="@drawable/term_conditions_icon" />
+                    android:src="@drawable/ic_term_conditions_ico"
+                    tools:ignore="VectorDrawableCompat" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -336,7 +339,7 @@
                     android:layout_width="@dimen/_40sdp"
                     android:layout_height="@dimen/_40sdp"
                     android:padding="@dimen/_10sdp"
-                    android:src="@drawable/privecy_policy_icon" />
+                    app:srcCompat="@drawable/privecy_policy_icon" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -363,7 +366,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
+                android:background="@drawable/setting_drawable"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:orientation="vertical">
 
@@ -452,7 +455,7 @@
             <RelativeLayout
                 android:id="@+id/lnr_location"
                 android:layout_width="match_parent"
-                android:background="@color/white"
+                android:background="@drawable/setting_drawable"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_height="wrap_content">
 
