--- a/app/src/main/res/layout/registration_part_one_email.xml
+++ b/app/src/main/res/layout/registration_part_one_email.xml
@@ -88,6 +88,7 @@
                 android:layout_centerVertical="true"
                 android:inputType="textEmailAddress"
                 android:layout_marginLeft="@dimen/_10sdp"
+                android:fontFamily="@font/raleway_light"
                 android:backgroundTint="@color/transparent"
                 android:drawableTint="@color/transparent"/>
 
