--- a/app/src/main/res/layout/registration_part_one_email.xml
+++ b/app/src/main/res/layout/registration_part_one_email.xml
@@ -48,7 +48,7 @@
             android:text="@string/whats_your_email"
             android:textColor="@color/black"
             android:textSize="@dimen/_19sdp"
-            android:fontFamily="@font/raleway_medium"
+            android:fontFamily="@font/raleway_semibold"
             android:textStyle="bold"
             />
 
@@ -88,7 +88,7 @@
                 android:layout_centerVertical="true"
                 android:inputType="textEmailAddress"
                 android:layout_marginLeft="@dimen/_10sdp"
-                android:fontFamily="@font/raleway_light"
+                android:fontFamily="@font/raleway_medium"
                 android:backgroundTint="@color/transparent"
                 android:drawableTint="@color/transparent"/>
 
@@ -111,7 +111,7 @@
         android:layout_marginRight="@dimen/_12sdp"
         style="?android:attr/borderlessButtonStyle"
         android:textAllCaps="false"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto_bold"
         android:textColor="@color/button_text_new_reg"
         android:textSize="@dimen/_14sdp"
         android:text="Next"/>
