--- a/app/src/main/res/layout/welcome_slide4_new.xml
+++ b/app/src/main/res/layout/welcome_slide4_new.xml
@@ -15,7 +15,7 @@
         android:text="Get discounts!"
         android:textColor="@color/colorPrimaryDark_new"
         android:textSize="@dimen/_18sdp"
-        android:fontFamily="@font/roboto_medium"/>
+        android:fontFamily="@font/montserrat_semibold"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
         android:text="Use your keypoints to get discounts and rewards. The more active you are, the more rewards you can get. "
         android:textColor="@color/reward_day_color"
         android:textSize="@dimen/_12sdp"
-        android:fontFamily="@font/roboto_regular"/>
+        android:fontFamily="@font/montserrat_regular"/>
 
     <android.support.v7.widget.AppCompatImageView
         android:layout_width="@dimen/_200sdp"
