--- a/app/src/main/res/layout/registration_part_one_password.xml
+++ b/app/src/main/res/layout/registration_part_one_password.xml
@@ -49,7 +49,7 @@
             android:text="@string/whats_your_pass"
             android:textColor="@color/black"
             android:textSize="@dimen/_19sdp"
-            android:fontFamily="@font/raleway_medium"
+            android:fontFamily="@font/raleway_semibold"
             android:textStyle="bold"
             />
 
@@ -77,6 +77,7 @@
                 android:textSize="@dimen/_11sdp"
                 android:layout_centerVertical="true"
                 android:inputType="textPassword"
+                android:fontFamily="@font/raleway_medium"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:backgroundTint="@color/transparent"
                 android:drawableTint="@color/transparent"/>
@@ -99,11 +100,11 @@
         android:layout_marginLeft="@dimen/_12sdp"
         android:layout_marginRight="@dimen/_12sdp"
         android:textColor="@color/white"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto_bold"
         style="?android:attr/borderlessButtonStyle"
         android:textAllCaps="false"
         android:textSize="@dimen/_14sdp"
-        android:text="Sign in"/>
+        android:text="Sign In"/>
 
     <TextView
         android:id="@+id/tv_forgot_pass"
@@ -113,7 +114,7 @@
         android:text="Forgot your password? "
         android:textColor="@color/colorPrimaryDark_new"
         android:layout_gravity="center"
-        android:fontFamily="@font/raleway_light"
+        android:fontFamily="@font/raleway_regular"
         android:gravity="center"/>
 
     <LinearLayout
@@ -135,6 +136,7 @@
             android:layout_gravity="center"
             android:gravity="center_vertical"
             android:theme="@style/MyCheckbox"
+            android:fontFamily="@font/raleway_regular"
             android:textColor="@color/email_text_new_reg"/>
 
         <TextView
@@ -143,6 +145,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/tnc"
+            android:fontFamily="@font/raleway_regular"
             android:textColor="@color/colorPrimaryDark_new"
             />
 
@@ -154,6 +157,7 @@
             android:layout_gravity="center"
             android:gravity="center_vertical"
             android:theme="@style/MyCheckbox"
+            android:fontFamily="@font/raleway_regular"
             android:textColor="@color/email_text_new_reg"/>
 
 
@@ -163,6 +167,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/privacy_policy"
+            android:fontFamily="@font/raleway_regular"
             android:textColor="@color/colorPrimaryDark_new"
             />
 
