--- a/app/src/main/res/layout/welcome_slide2_new.xml
+++ b/app/src/main/res/layout/welcome_slide2_new.xml
@@ -15,7 +15,7 @@
         android:text="Your interests come to you"
         android:textColor="@color/colorPrimaryDark_new"
         android:textSize="@dimen/_18sdp"
-        android:fontFamily="@font/roboto_medium"/>
+        android:fontFamily="@font/montserrat_semibold"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
         android:text="Follow your interests and get alerts when they happen in your area (hard press the token)."
         android:textColor="@color/reward_day_color"
         android:textSize="@dimen/_12sdp"
-        android:fontFamily="@font/roboto_regular"/>
+        android:fontFamily="@font/montserrat_regular"/>
 
     <android.support.v7.widget.AppCompatImageView
         android:layout_width="@dimen/_200sdp"
