--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -54,6 +54,7 @@
     <color name="new_white_bg">#f3f3f3</color>
     <color name="old_primary">#40a6a7</color>
     <color name="reward_description">#3B3B3B</color>
+    <color name="room_circle_iv_color">#de717f</color>
 
 
     <!--New color-->
