--- a/app/src/main/res/layout/trend_user_view.xml
+++ b/app/src/main/res/layout/trend_user_view.xml
@@ -9,12 +9,13 @@
     android:gravity="center"
     >
 
-    <com.mikhaellopez.circularimageview.CircularImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+    <com.mikhaellopez.circularimageview.CircularImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/comeInProfile_t"
         android:layout_width="@dimen/_25sdp"
         android:layout_height="@dimen/_25sdp"
         android:src="@drawable/image_default_profile"
-        app:civ_border_color="@color/old_primary"
+        app:civ_border_color="@color/room_circle_iv_color"
         android:padding="2dp"
         app:civ_border_width="@dimen/_1sdp" />
 
