--- a/app/src/main/res/layout/new_adapter_reward.xml
+++ b/app/src/main/res/layout/new_adapter_reward.xml
@@ -73,6 +73,7 @@
             android:background="@color/gray3"/>
 
         <RelativeLayout
+            android:id="@+id/rl_wallet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_5sdp"
