--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:clickable="true"
+    android:id="@+id/rl_eventdetail"
     android:fitsSystemWindows="true"
     android:focusable="true"
     tools:context=".activity.HomeActivity">
