--- a/app/src/main/res/layout/new_fragment_profile_new_fragment.xml
+++ b/app/src/main/res/layout/new_fragment_profile_new_fragment.xml
@@ -280,7 +280,7 @@
 
                         <RelativeLayout
                             android:id="@+id/rl_view"
-                            android:layout_width="@dimen/_50sdp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:visibility="gone"
