--- a/app/src/main/res/layout/activity_tnc.xml
+++ b/app/src/main/res/layout/activity_tnc.xml
@@ -36,7 +36,7 @@
 
 
     <WebView
-        android:id="@+id/webview"
+        android:id="@+id/ew"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
